--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set (CMAKE_CXX_STANDARD 17)
 add_subdirectory (async)
 
 find_package(GTest)
-find_package (Boost 1.74 REQUIRED COMPONENTS filesystem)
+find_package (Boost 1.83 REQUIRED COMPONENTS system thread)
 
 add_executable (${PROJECT_NAME} main.cpp)
 add_executable(asyncServer_gtest test/asyncServer_gtest.cpp)
