--- a/.github/workflows/async.yml
+++ b/.github/workflows/async.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           submodules: true
       - run: sudo apt-get update && sudo apt-get install libgtest-dev
-      - run: sudo apt-get update && sudo apt-get install libboost-test-dev -y && sudo apt-get install libboost-thread -y
+      - run: sudo apt-get update && sudo apt-get install libboost-thread-dev -y
       - run: cmake . -DPATCH_VERSION=${{ github.run_number }}
       - run: cmake --build .
       - run: cmake --build . --target test
